# dstify

./: .gitignore  Cargo.toml  README.md
dstify/: Cargo.toml
dstify/src/smart_pointer/: boxed.rs  mod.rs  rc.rs
dstify_derive/: Cargo.toml  README.md
dstify_derive/src/: lib.rs
src/: lib.rs  private.rs
src/smart_pointer/: arc.rs  boxed.rs  mod.rs  rc.rs
tests/: dyn_trait.rs  no_std.rs  std.rs
tests/common/: mod.rs
